--- a/Interfaz Grafica/menu.html
+++ b/Interfaz Grafica/menu.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,28 +10,31 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="./js/login.js"></script>
+    <script src="./js/menu.js"></script>
 </head>
 <body>
     <div class="container">
         <div class="row mt-5">
-            <div class="col-6 offset-3">
-                <h1>Inicia sesión</h1>
+            <div class="col-1 offset-5">
+                <h1>Bienvenido</h1>
             </div>
-        </div>
+        </div><br><br>
         <div class="row align-items-center">
             <div class="col-6 offset-3">
-                <div class="form-group">
-                    <label for="input-mail">Correo electrónico</label>
-                    <input type="email" class="form-control" id="input-mail" placeholder="correo@dominio.ext">
-                    <small class="form-text text-muted">El correo con el que te registraste.</small>
-                </div>
-                <div class="form-group">
-                    <label for="input-password">Contraseña</label>
-                    <input type="password" class="form-control" id="input-password" placeholder="***********">
-                </div>
-                <div class="d-flex justify-content-between">
-                    <button class="btn btn-primary">Entrar</button>
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-success">Agregar empleado</button>
+                </div><br>
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-warning">Modificar Empleado</button>
+                </div><br>
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-primary">Eliminar empleado</button>
+                </div><br>
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-info">Buscar empleado</button>
+                </div><br>
+                <div class="d-flex justify-content-center">
+                    <button class="btn btn-danger">Salir</button>
                 </div>
             </div>
         </div>
