--- a/Interfaz Grafica/menu.html
+++ b/Interfaz Grafica/menu.html
@@ -22,19 +22,19 @@
         <div class="row align-items-center">
             <div class="col-6 offset-3">
                 <div class="d-flex justify-content-center">
-                    <button class="btn btn-success">Agregar empleado</button>
+                    <button class="btn btn-info" id="agregar">Agregar empleado</button>
                 </div><br>
                 <div class="d-flex justify-content-center">
-                    <button class="btn btn-warning">Modificar Empleado</button>
+                    <button class="btn btn-info" id="modificar">Modificar Empleado</button>
                 </div><br>
                 <div class="d-flex justify-content-center">
-                    <button class="btn btn-primary">Eliminar empleado</button>
+                    <button class="btn btn-info" id="eliminar">Eliminar empleado</button>
                 </div><br>
                 <div class="d-flex justify-content-center">
-                    <button class="btn btn-info">Buscar empleado</button>
+                    <button class="btn btn-info" id="buscar">Buscar empleado</button>
                 </div><br>
                 <div class="d-flex justify-content-center">
-                    <button class="btn btn-danger">Salir</button>
+                    <button class="btn btn-danger" id="salir">Salir</button>
                 </div>
             </div>
         </div>
